# MambaProject

Mamba/framework/: .gitignore  CMakeLists.txt  build.gradle  proguard-rules.pro
Mamba/framework/src/main/: AndroidManifest.xml
Mamba/framework/src/main/cpp/effect/common/: Bitmap.cpp  CommonTime.cpp  FrameCtrl.cpp  HashKey.cpp  Matrixs.cpp  Object.cpp  base64.cpp  tinystr.cpp  tinyxml.cpp  tinyxmlerror.cpp  tinyxmlparser.cpp
Mamba/framework/src/main/cpp/effect/facetrack/: CVFaceTracker.cpp  Flandmark.cpp  IFaceTracker.cpp  libLBP.cpp
Mamba/framework/src/main/cpp/effect/gpuimage/: AnimateLoader.cpp  AnimateManager.cpp  CurveSamples.cpp  GLProgram.cpp  GPUImageAnimateFilter.cpp  GPUImageAnimateFilter2.cpp  GPUImageBase.cpp  GPUImageBilateralFilter.cpp  GPUImageBlurAdapter.cpp  GPUImageCallback.cpp  GPUImageCameraFilter.cpp  GPUImageContext.cpp  GPUImageCurveFilter.cpp  GPUImageDisplayFilter.cpp  GPUImageEnvironment.cpp  GPUImageFaceARFilter.cpp  GPUImageFilter.cpp  GPUImageFramebuffer.cpp  GPUImageGaussianBlurFilter.cpp  GPUImageHighpassFilter.cpp  GPUImageMath.cpp  GPUImageOutput.cpp  GPUImageOutputFilter.cpp  GPUImagePinkBlurFilter.cpp  GPUImagePinkBlurFilter2.cpp  GPUImagePinkBlurFilter3.cpp  GPUImageRotationMode.cpp  GPUImageScaleFilter.cpp  GPUImageSharpenFilter.cpp  GPUImageSharpenFilter2.cpp  GPUImageSmoothFilter.cpp  GPUImageStyleFilter.cpp  GPUImageTexture.cpp  GPUImageTextureOptions.cpp  GPUImageTitleFilter.cpp  GPUImageTwoInputFilter.cpp  GPUImageTwoPassFilter.cpp  GPUImageTwoPassTextureSamplingFilter.cpp  GPUImageVideoFilter.cpp  GPUImageWriteFilter.cpp  (+2 more)
Mamba/framework/src/main/cpp/effect/jni/: KuGouEffect.cpp  KuGouEffectImpl.cpp  KuGouEffectNative.cpp
Mamba/framework/src/main/cpp/effect/libpng/: png.c  pngerror.c  pngget.c  pngmem.c  pngpread.c  pngread.c  pngrio.c  pngrtran.c  pngrutil.c  pngset.c  pngtest.c  pngtrans.c  pngwio.c  pngwrite.c  pngwtran.c  pngwutil.c
Mamba/framework/src/main/cpp/jni/: VideoClip.cpp
Mamba/framework/src/main/cpp/jni/include/: VideoClip.h
Mamba/framework/src/main/cpp/video/: AudioRecord.cpp  BeautyAvFrame.cpp  ChangeFrameRate.cpp  CutVideo.cpp  Demuxer.cpp  Encoder.cpp  FFmpegBase.cpp  FFmpegUtil.cpp  FileUtil.cpp  Filter.cpp  HandleProgressCallback.cpp  KeyFrame.cpp  Muxer.cpp  ReEncode.cpp  Record.cpp  Remuxer.cpp  RepeatMoment.cpp  ThreadPool.cpp  TimeMachine.cpp  VideoMerge.cpp  VideoRecodeFactory.cpp  VideoRecord.cpp  VideoRecord1.cpp  VideoRotate.cpp  Watermark.cpp  audioDecode.cpp  audioMix.cpp  audioRate.cpp  audioTranscode.cpp  audioVolumn.cpp  audio_mix.cpp  audio_vol_change_two.cpp  bmputil.cpp  mp4toyuv.cpp  remuxermp4.cpp  reverse.cpp  reverse2.cpp  videoFilter.cpp  videoMix.cpp  videoTranscode.cpp  (+1 more)
Mamba/framework/src/main/cpp/video/common/: AudioDealProduce.cpp  AudioToAac.cpp  Log.cpp  ThreadExecutor.cpp  ThreadPool.cpp  Time.cpp  VideoCodeProduce.cpp
Mamba/framework/src/main/cpp/video/effect/: AudioNormalEffect.cpp  AudioRelativeEffect.cpp  AudioRepeatEffect.cpp  FFmpegEffect.cpp  FFmpegEffectJni.cpp  VideoNormalEffect.cpp  VideoRelativeEffect.cpp  VideoRepeatEffect.cpp
Mamba/framework/src/main/cpp/video/encode/: FfmpegVideoEncoder.cpp  FfmpegVideoEncoder1.cpp  FfmpegVideoEncoderJni.cpp
Mamba/framework/src/main/jni/: Android.mk  Application.mk
Mamba/framework/src/main/jni/fdk-aac-0.1.5/: Android.mk
Mamba/framework/src/main/jni/soundtouch/: Android.mk
Mamba/framework/src/main/res/layout/: fragment_audio_edit.xml  fragment_camera_encode.xml  fragment_videoclip.xml  fragment_videoplayer.xml  slidingmenu_behind_view.xml  slidingmenu_main.xml
Mamba/framework/src/main/res/values/: attrs.xml  ids.xml
(+445 files in other folders)
